[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
ciborium = "0.2.2"
serde = "1.0.198"
sha256 = "1.5.0"
uint = "0.9.5"
uuid={version = "1.8.0", features = ["v4", "serde"]}
k256 = {version = "0.13.4", features = ["serde", "pem"]}
ecdsa = {version = "0.16.9", features = ["signing", "verifying", "serde", "pem"]}
hex = "0.4.3"
rand = "0.8.5"
